[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/Todot/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/Todot/Assets/Checklist.png" type="Texture" id=2]
[ext_resource path="res://addons/Todot/Src/Scripts/Checklist.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.647059, 1, 0.32549, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.192157 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Checklist" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.280609
margin_top = -0.280609
margin_right = -0.28064
margin_bottom = -0.28064
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="."]
margin_right = 1023.0
margin_bottom = 25.0

[node name="TextureRect" type="TextureRect" parent="TitleContainer"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="TitleEdit" type="LineEdit" parent="TitleContainer"]
margin_left = 29.0
margin_right = 1023.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressContainer" type="HBoxContainer" parent="."]
margin_top = 35.0
margin_right = 1023.0
margin_bottom = 49.0

[node name="PercentLabel" type="Label" parent="ProgressContainer"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="ProgressContainer"]
margin_left = 12.0
margin_right = 1023.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false

[node name="CheckItemContainer" type="VBoxContainer" parent="."]
margin_top = 59.0
margin_right = 1023.0
margin_bottom = 59.0

[node name="Button" type="Button" parent="."]
margin_left = 491.0
margin_top = 69.0
margin_right = 532.0
margin_bottom = 89.0
size_flags_horizontal = 4
text = "ADD"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
